feat udistrital/arka_cliente#874: Depreciacion
- Controlador que retorna los elementos con vida util restante para liquidar depreciacion
